# college-student-pe-score

./: Cargo.toml  Dockerfile  config.yaml  openapi.json  readme.md
.github/workflows/: deploy-tencent.yml  deploy.yml  format.yml
dto-examples-json/: request.json  response.json
src/: main.rs  router.rs
src/api/: cal.rs  mod.rs  ping.rs
