[package]
name = "college-student-pe-score"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
axum = "0.6.18"
